--- a/LocalDataApplication/app/build.gradle
+++ b/LocalDataApplication/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id 'kotlin-parcelize'
     //  Room
     id 'kotlin-kapt'
-
 }
 
 android {
@@ -69,6 +68,6 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.3.0'
 
     // Work Manager
-    implementation "androidx.work:work-runtime:2.5.0"
+    implementation 'androidx.work:work-runtime:2.7.0-alpha05'
     implementation 'com.loopj.android:android-async-http:1.4.10'
 }
